# extendhash

./: Cargo.toml  README.md
src/: chunks.rs  hash.rs  lib.rs  md5.rs  sha0.rs  sha01.rs  sha1.rs  sha256.rs  sha512.rs
